--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde quae velit
+      quos aperiam provident recusandae enim harum totam nostrum placeat debitis
+      quod illo, non repellat cum veritatis modi impedit consequuntur.
+    </p>
+  </body>
 </html>
